# ikarus

./: .bettercodehub.yml  .clang-format  .clangd  .cmake-format  .gdbinit  .gitignore  .markdownlint.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  README.md  Test2DSolid0.vtu  Test2DSolid1.vtu  UMLNumPro.drawio  codecov.yaml  codecov.yml  codespellignore  config.h  config.h.cmake  docker-compose.yml  dune.module  ikarus.pc.in  iwyu.imp  pyproject.toml  pythonpath.txt  result.vtu  resultdisplacement.vtu  setup.py  test.txt
benchmarks/: CMakeLists.txt
benchmarks/src/: benchdummy.cpp  denseReducedAssembly.cpp
cmake/FormatTarget/: CMakeLists.txt
cmake/modules/: AddAutoDiffFlags.cmake  AddDuneLocalFeFlags.cmake  AddEigenFlags.cmake  AddMatplotppFlags.cmake  AddMuesliFlags.cmake  AddSpdlogFlags.cmake  AddSpectraFlags.cmake  CMakeLists.txt  FindAlberta.cmake  FindMETIS.cmake  FindSUPERLU.cmake  FindSuiteSparse.cmake  IkarusMacros.cmake
docs/: CMakeLists.txt  CNAME  literature.bib  literature.bib.license  markdownlint-config.yaml  mkdocs-macros.py  mkdocs.insiders.yml  mkdocs.yml
docs/BuildLocally/: CMakeLists.txt  InstalldepsForDocBuild.sh
docs/Ikarus/: mkdocs.yml
docs/__pycache__/: mkdocs-macros.cpython-39.pyc.license
docs/javascripts/: mathjax.js
docs/site/: grid.md
docs/website/: AdvancedTopics.md  BuildTheDocumentationLocally.md  about.md  codeStyle.md  cppRec.md  cppRef.md  download.md  examples.md  gallery.md  get.md  howToEdit.md  howtocontribute.md  index.md  installation.md  openTask.md
examples/: CMakeLists.txt
examples/source/: StaticLinear.cpp  StaticLinear2.cpp
examples/src/: StaticLinear.cpp  StaticLinear2.cpp  bifurcationOfRubberBlock.cpp  cook_membrane.cpp  cook_membrane_3d.cpp  cook_membrane_convergence.cpp  drawgrid.cpp  ex_MG_Lshape.cpp  ex_MicroMagnetics.cpp  ex_SpatialBeam.cpp  tut_basis_oneDGrid.cpp  tut_basis_oneDGridEmpty.cpp  tut_basis_oneDGrid_sophisticated.cpp  tut_compute-pi.cpp  tut_compute-pi0.cpp  tut_compute-pi1.cpp  tut_gridEntities.cpp  tut_incompressible_LinearElasticity.cpp  tut_kirchhoff-love-plate.cpp  tut_kirchhoff-plate.cpp  tut_newtonRaphson.cpp  tut_newtonRhapson.cpp  tut_nonlinear2Dsolid.cpp  tut_vonmisestruss.cpp  tut_vonmisestruss_clean.cpp  tutorial0.cpp  tutorial0_.cpp  tutorial1.cpp  tutorial1_.cpp  tutorial2.cpp  tutorial4.cpp
ikarus/: CMakeLists.txt  affordances.cpp  affordances.hh
ikarus/assembler/: CMakeLists.txt  assemblermanipulator.hh  assemblermanipulatorbuildingblocks.hh  assemblermanipulatorfuser.hh  dirichletbcenforcement.hh  interface.hh  simpleAssemblers.hh  simpleAssemblers.inl  simpleassemblers.hh  simpleassemblers.inl
ikarus/controlRoutines/: adaptiveStepSizing.hh  loadControl.hh  pathFollowingTechnique.hh
ikarus/controlroutines/: CMakeLists.txt  adaptivestepsizing.hh  common.hh  controlinfos.hh  controlroutinebase.hh  controlroutinefactory.hh  controlroutinestate.hh  controlstate.hh  loadcontrol.hh  loadcontrol.inl  pathfollowing.hh  pathfollowing.inl  pathfollowingfunctions.hh  pathfollowingfunctionsinterface.hh  pathfollowingtechnique.hh
ikarus/experimental/: CMakeLists.txt  autodiffmat.hh
ikarus/finiteElements/: fEparameter.hh  feRequirements.cpp  feRequirements.hh  feTraits.hh  physicsHelper.hh  unitvectormod.hh
ikarus/finiteelements/: CMakeLists.txt  autodifffe.hh  febase.hh  febases.hh  feconfiguration.hh  fefactory.hh  fehelper.hh  feparameter.hh  ferequirements.hh  feresulttypes.hh  fesettings.hh  fetraits.hh  mixin.hh  physicshelper.hh  quadraturerulehelper.hh
ikarus/io/: CMakeLists.txt  analyticGridViewFunctionMod.hh  composedGgridfuncMod.hh  discreteGlobalManifoldBasisFunction.hh  loadfesettings.hh  resultEvaluators.hh  resultFunction.hh  resultevaluators.hh  resultfunction.hh  shell2DDataCollector.hh  shell3DDataCollector.hh  vtkFunctionExtensions.hh  vtkcontainertypes.hh  vtkdatatag.hh  vtkfunctionmod.hh  vtkwriter.hh
ikarus/linearAlgebra/: dirichletValues.hh  nonLinearOperator.hh  truncatedConjugateGradient.hh
ikarus/linearalgebra/: CMakeLists.txt  dirichletvalues.hh  nonlinearoperator.hh  truncatedconjugategradient.hh
ikarus/python/: CMakeLists.txt
ikarus/solver/: CMakeLists.txt
ikarus/utils/: CMakeLists.txt  algorithms.hh  autodiffhelper.hh  basis.hh  concepts.hh  defaultFunctions.hh  defaultfunctions.hh  derivativetraits.hh  differentiablefunction.hh  differentiablefunctionfactory.hh  dirichletvalues.hh  duneUtilities.hh  duneutilities.hh  eigenDuneTransformations.hh  eigendunetransformations.hh  eigensparseaddon.hh  fancyactivationfunctions.hh  findLineSegment.cpp  findLineSegment.hh  findlinesegment.cpp  findlinesegment.hh  flatPreBasis.hh  flatprebasis.hh  functionSanityChecks.cpp  functionSanityChecks.hh  functionhelper.hh  functionsanitychecks.cpp  functionsanitychecks.hh  init.cpp  init.hh  integersequence.hh  lambertw.hh  linearAlgebraHelper.hh  linearalgebrahelper.hh  makeEnum.hh  makeenum.hh  math.hh  nonlinearoperator.hh  nonlinopfactory.hh  pathFollowingFunctions.hh  (+11 more)
python/: CMakeLists.txt  setup.py.in
python/dune/: CMakeLists.txt
python/ikarus/: CMakeLists.txt  __init__.py  _ikarus.cc  _toVoigt.py  basis.py  dirichletValues.py  dirichlet_values.py  generator.py  materials.py  pythonhelpers.hh  toVoigt.py
sandbox/src/: CMakeLists.txt  bifurcationOfRubberBlock.cpp  sandbox.cpp  tut_compute-pi1.cpp  vonMisesTruss.cpp
src/: CMakeLists.txt
src/include/: CMakeLists.txt
test/: CMakeLists.txt
test/source/: DependenciesTest.cpp  FiniteElementInterfaceTest.cpp  GeometryTest.cpp  GridEntitiesTest.cpp  GridTest.cpp  ParameterSpaceElements.cpp  PythonBindingTest.cpp  SimpleShapeFunctionTest.cpp  VariableOwner.cpp  VariableTest.cpp  testHelpers.h
tests/: CMakeLists.txt
tests/src/: AssemblerTest.cpp  BasisTest.cpp  CMakeLists.txt  DependenciesTest.cpp  DofHandlerTest.cpp  FEFactoryTest.cpp  FEManagerTest.cpp  FiniteElementInterfaceTest.cpp  GeometryTest.cpp  GridDataTest.cpp  GridEntitiesTest.cpp  GridTest.cpp  LinearSolverTest.cpp  LoadControlTest.cpp  LoadControlTestWithDuneGridAndBasis.cpp  PolyFitTest.cpp  (+146 more)
(+871 files in other folders)
