# SPDX-FileCopyrightText: 2021-2025 The Ikarus Developers ikarus@ibb.uni-stuttgart.de
# SPDX-License-Identifier: LGPL-3.0-or-later

# install headers
install(
  FILES loadcontrol.hh
        loadcontrol.inl
        pathfollowing.hh
        pathfollowing.inl
        adaptivestepsizing.hh
        controlinfos.hh
        pathfollowingfunctions.hh
        controlroutinebase.hh
        controlroutinefactory.hh
        controlroutinestate.hh
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/ikarus/controlroutines
)
