# SPDX-FileCopyrightText: 2021-2023 The Ikarus Developers mueller@ibb.uni-stuttgart.de
# SPDX-License-Identifier: LGPL-3.0-or-later

add_subdirectory(finiteelements)
add_subdirectory(assembler)
add_subdirectory(dirichletvalues)
add_subdirectory(test)
add_subdirectory(basis)
add_subdirectory(utils)

