# SPDX-FileCopyrightText: 2021-2025 The Ikarus Developers ikarus@ibb.uni-stuttgart.de
# SPDX-License-Identifier: LGPL-3.0-or-later

add_subdirectory(finiteelements)
add_subdirectory(assembler)
add_subdirectory(dirichletvalues)
add_subdirectory(test)
add_subdirectory(basis)
add_subdirectory(utils)
add_subdirectory(io)
